resources/assets/js/Parser/Bison/BisonParser.js
// Generated from /home/melihovv/Projects/edu/grammar_review_tool/resources/assets/js/Parser/Bison/BisonParser.g4 by ANTLR 4.6
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BisonParserListener = require('./BisonParserListener').BisonParserListener;
var BisonParserVisitor = require('./BisonParserVisitor').BisonParserVisitor;

var grammarFileName = "BisonParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, null, null, "'%%'", "'{'", null, "'<*>'", "'<>'", 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'?'" ];

var symbolicNames = [ null, "WS", "BLOCK_COMMENT", "LINE_COMMENT", "PIPE", 
                      "SEMICOLON", "DIRECTIVE", "ID", "INT", "CHAR", "STRING", 
                      "PROLOGUE_START", "PERCENT_PERCENT", "BRACED_CODE_START", 
                      "PREDICATE_START", "TAG_ANY", "TAG_NONE", "TAG_START", 
                      "REF", "ERROR_CHARACTER", "AFTER_ID_WS", "AFTER_ID_BLOCK_COMMENT", 
                      "AFTER_ID_LINE_COMMENT", "AFTER_ID_OPEN_BRACKET", 
                      "AFTER_ID_COLON", "AFTER_ID_ANY", "PROLOGUE_CLOSE", 
                      "PROLOGUE_CONTENT", "EPILOGUE_CONTENT", "BRACED_CODE_CLOSE", 
                      "BRACED_CODE_CONTENT", "PREDICATE_CLOSE", "PREDICATE_CONTENT", 
                      "TAG_CLOSE", "TAG_CONTENT", "PREDICATE_QUESTION" ];

var ruleNames =  [ "file", "prologueDeclaration", "directive", "grammarDeclaration", 
                   "prologue", "code", "predicate", "tagRule", "symbolDeclaration", 
                   "precedenceDeclaration", "tag", "symbolDef", "grammarRule", 
                   "rulesOrGrammarDeclaration", "rules", "rhses", "rhs", 
                   "variable", "value", "id", "symbol", "ref", "epilogue" ];

function BisonParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BisonParser.prototype = Object.create(antlr4.Parser.prototype);
BisonParser.prototype.constructor = BisonParser;

Object.defineProperty(BisonParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BisonParser.EOF = antlr4.Token.EOF;
BisonParser.WS = 1;
BisonParser.BLOCK_COMMENT = 2;
BisonParser.LINE_COMMENT = 3;
BisonParser.PIPE = 4;
BisonParser.SEMICOLON = 5;
BisonParser.DIRECTIVE = 6;
BisonParser.ID = 7;
BisonParser.INT = 8;
BisonParser.CHAR = 9;
BisonParser.STRING = 10;
BisonParser.PROLOGUE_START = 11;
BisonParser.PERCENT_PERCENT = 12;
BisonParser.BRACED_CODE_START = 13;
BisonParser.PREDICATE_START = 14;
BisonParser.TAG_ANY = 15;
BisonParser.TAG_NONE = 16;
BisonParser.TAG_START = 17;
BisonParser.REF = 18;
BisonParser.ERROR_CHARACTER = 19;
BisonParser.AFTER_ID_WS = 20;
BisonParser.AFTER_ID_BLOCK_COMMENT = 21;
BisonParser.AFTER_ID_LINE_COMMENT = 22;
BisonParser.AFTER_ID_OPEN_BRACKET = 23;
BisonParser.AFTER_ID_COLON = 24;
BisonParser.AFTER_ID_ANY = 25;
BisonParser.PROLOGUE_CLOSE = 26;
BisonParser.PROLOGUE_CONTENT = 27;
BisonParser.EPILOGUE_CONTENT = 28;
BisonParser.BRACED_CODE_CLOSE = 29;
BisonParser.BRACED_CODE_CONTENT = 30;
BisonParser.PREDICATE_CLOSE = 31;
BisonParser.PREDICATE_CONTENT = 32;
BisonParser.TAG_CLOSE = 33;
BisonParser.TAG_CONTENT = 34;
BisonParser.PREDICATE_QUESTION = 35;

BisonParser.RULE_file = 0;
BisonParser.RULE_prologueDeclaration = 1;
BisonParser.RULE_directive = 2;
BisonParser.RULE_grammarDeclaration = 3;
BisonParser.RULE_prologue = 4;
BisonParser.RULE_code = 5;
BisonParser.RULE_predicate = 6;
BisonParser.RULE_tagRule = 7;
BisonParser.RULE_symbolDeclaration = 8;
BisonParser.RULE_precedenceDeclaration = 9;
BisonParser.RULE_tag = 10;
BisonParser.RULE_symbolDef = 11;
BisonParser.RULE_grammarRule = 12;
BisonParser.RULE_rulesOrGrammarDeclaration = 13;
BisonParser.RULE_rules = 14;
BisonParser.RULE_rhses = 15;
BisonParser.RULE_rhs = 16;
BisonParser.RULE_variable = 17;
BisonParser.RULE_value = 18;
BisonParser.RULE_id = 19;
BisonParser.RULE_symbol = 20;
BisonParser.RULE_ref = 21;
BisonParser.RULE_epilogue = 22;

function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.PERCENT_PERCENT = function() {
    return this.getToken(BisonParser.PERCENT_PERCENT, 0);
};

FileContext.prototype.grammarRule = function() {
    return this.getTypedRuleContext(GrammarRuleContext,0);
};

FileContext.prototype.prologueDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PrologueDeclarationContext);
    } else {
        return this.getTypedRuleContext(PrologueDeclarationContext,i);
    }
};

FileContext.prototype.epilogue = function() {
    return this.getTypedRuleContext(EpilogueContext,0);
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitFile(this);
	}
};

FileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitFile(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.FileContext = FileContext;

BisonParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BisonParser.RULE_file);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BisonParser.SEMICOLON) | (1 << BisonParser.DIRECTIVE) | (1 << BisonParser.PROLOGUE_START))) !== 0)) {
            this.state = 46;
            this.prologueDeclaration();
            this.state = 51;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 52;
        this.match(BisonParser.PERCENT_PERCENT);
        this.state = 53;
        this.grammarRule();
        this.state = 55;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===BisonParser.PERCENT_PERCENT) {
            this.state = 54;
            this.epilogue();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PrologueDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_prologueDeclaration;
    return this;
}

PrologueDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrologueDeclarationContext.prototype.constructor = PrologueDeclarationContext;

PrologueDeclarationContext.prototype.grammarDeclaration = function() {
    return this.getTypedRuleContext(GrammarDeclarationContext,0);
};

PrologueDeclarationContext.prototype.prologue = function() {
    return this.getTypedRuleContext(PrologueContext,0);
};

PrologueDeclarationContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

PrologueDeclarationContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

PrologueDeclarationContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

PrologueDeclarationContext.prototype.STRING = function() {
    return this.getToken(BisonParser.STRING, 0);
};

PrologueDeclarationContext.prototype.INT = function() {
    return this.getToken(BisonParser.INT, 0);
};

PrologueDeclarationContext.prototype.code = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CodeContext);
    } else {
        return this.getTypedRuleContext(CodeContext,i);
    }
};

PrologueDeclarationContext.prototype.SEMICOLON = function() {
    return this.getToken(BisonParser.SEMICOLON, 0);
};

PrologueDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterPrologueDeclaration(this);
	}
};

PrologueDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitPrologueDeclaration(this);
	}
};

PrologueDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitPrologueDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.PrologueDeclarationContext = PrologueDeclarationContext;

BisonParser.prototype.prologueDeclaration = function() {

    var localctx = new PrologueDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BisonParser.RULE_prologueDeclaration);
    var _la = 0; // Token type
    try {
        this.state = 73;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 57;
            this.grammarDeclaration();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 58;
            this.prologue();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 59;
            this.directive();
            this.state = 70;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
            if(la_===1) {
                this.state = 60;
                this.variable();
                this.state = 61;
                this.value();

            } else if(la_===2) {
                this.state = 63;
                this.match(BisonParser.STRING);

            } else if(la_===3) {
                this.state = 64;
                this.match(BisonParser.INT);

            } else if(la_===4) {
                this.state = 66; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 65;
                    this.code();
                    this.state = 68; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while(_la===BisonParser.BRACED_CODE_START);

            }
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 72;
            this.match(BisonParser.SEMICOLON);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DirectiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_directive;
    return this;
}

DirectiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DirectiveContext.prototype.constructor = DirectiveContext;

DirectiveContext.prototype.DIRECTIVE = function() {
    return this.getToken(BisonParser.DIRECTIVE, 0);
};

DirectiveContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterDirective(this);
	}
};

DirectiveContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitDirective(this);
	}
};

DirectiveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitDirective(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.DirectiveContext = DirectiveContext;

BisonParser.prototype.directive = function() {

    var localctx = new DirectiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BisonParser.RULE_directive);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this.match(BisonParser.DIRECTIVE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GrammarDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_grammarDeclaration;
    return this;
}

GrammarDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GrammarDeclarationContext.prototype.constructor = GrammarDeclarationContext;

GrammarDeclarationContext.prototype.precedenceDeclaration = function() {
    return this.getTypedRuleContext(PrecedenceDeclarationContext,0);
};

GrammarDeclarationContext.prototype.symbolDeclaration = function() {
    return this.getTypedRuleContext(SymbolDeclarationContext,0);
};

GrammarDeclarationContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

GrammarDeclarationContext.prototype.symbol = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SymbolContext);
    } else {
        return this.getTypedRuleContext(SymbolContext,i);
    }
};

GrammarDeclarationContext.prototype.code = function() {
    return this.getTypedRuleContext(CodeContext,0);
};

GrammarDeclarationContext.prototype.tag = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TagContext);
    } else {
        return this.getTypedRuleContext(TagContext,i);
    }
};

GrammarDeclarationContext.prototype.ID = function() {
    return this.getToken(BisonParser.ID, 0);
};

GrammarDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterGrammarDeclaration(this);
	}
};

GrammarDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitGrammarDeclaration(this);
	}
};

GrammarDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitGrammarDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.GrammarDeclarationContext = GrammarDeclarationContext;

BisonParser.prototype.grammarDeclaration = function() {

    var localctx = new GrammarDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BisonParser.RULE_grammarDeclaration);
    var _la = 0; // Token type
    try {
        this.state = 94;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 77;
            this.precedenceDeclaration();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 78;
            this.symbolDeclaration();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 79;
            this.directive();
            this.state = 92;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
            if(la_===1) {
                this.state = 80;
                this.symbol();

            } else if(la_===2) {
                this.state = 81;
                this.code();
                this.state = 84; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 84;
                    this._errHandler.sync(this);
                    switch(this._input.LA(1)) {
                    case BisonParser.ID:
                    case BisonParser.CHAR:
                    case BisonParser.STRING:
                        this.state = 82;
                        this.symbol();
                        break;
                    case BisonParser.TAG_ANY:
                    case BisonParser.TAG_NONE:
                    case BisonParser.TAG_START:
                        this.state = 83;
                        this.tag();
                        break;
                    default:
                        throw new antlr4.error.NoViableAltException(this);
                    }
                    this.state = 86; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BisonParser.ID) | (1 << BisonParser.CHAR) | (1 << BisonParser.STRING) | (1 << BisonParser.TAG_ANY) | (1 << BisonParser.TAG_NONE) | (1 << BisonParser.TAG_START))) !== 0));

            } else if(la_===3) {
                this.state = 89;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===BisonParser.ID) {
                    this.state = 88;
                    this.match(BisonParser.ID);
                }

                this.state = 91;
                this.code();

            }
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PrologueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_prologue;
    return this;
}

PrologueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrologueContext.prototype.constructor = PrologueContext;

PrologueContext.prototype.PROLOGUE_START = function() {
    return this.getToken(BisonParser.PROLOGUE_START, 0);
};

PrologueContext.prototype.PROLOGUE_CLOSE = function() {
    return this.getToken(BisonParser.PROLOGUE_CLOSE, 0);
};

PrologueContext.prototype.PROLOGUE_CONTENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BisonParser.PROLOGUE_CONTENT);
    } else {
        return this.getToken(BisonParser.PROLOGUE_CONTENT, i);
    }
};


PrologueContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterPrologue(this);
	}
};

PrologueContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitPrologue(this);
	}
};

PrologueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitPrologue(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.PrologueContext = PrologueContext;

BisonParser.prototype.prologue = function() {

    var localctx = new PrologueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BisonParser.RULE_prologue);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(BisonParser.PROLOGUE_START);
        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BisonParser.PROLOGUE_CONTENT) {
            this.state = 97;
            this.match(BisonParser.PROLOGUE_CONTENT);
            this.state = 102;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 103;
        this.match(BisonParser.PROLOGUE_CLOSE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CodeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_code;
    return this;
}

CodeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CodeContext.prototype.constructor = CodeContext;

CodeContext.prototype.BRACED_CODE_START = function() {
    return this.getToken(BisonParser.BRACED_CODE_START, 0);
};

CodeContext.prototype.BRACED_CODE_CLOSE = function() {
    return this.getToken(BisonParser.BRACED_CODE_CLOSE, 0);
};

CodeContext.prototype.BRACED_CODE_CONTENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BisonParser.BRACED_CODE_CONTENT);
    } else {
        return this.getToken(BisonParser.BRACED_CODE_CONTENT, i);
    }
};


CodeContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterCode(this);
	}
};

CodeContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitCode(this);
	}
};

CodeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitCode(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.CodeContext = CodeContext;

BisonParser.prototype.code = function() {

    var localctx = new CodeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, BisonParser.RULE_code);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.match(BisonParser.BRACED_CODE_START);
        this.state = 109;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BisonParser.BRACED_CODE_CONTENT) {
            this.state = 106;
            this.match(BisonParser.BRACED_CODE_CONTENT);
            this.state = 111;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 112;
        this.match(BisonParser.BRACED_CODE_CLOSE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PredicateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_predicate;
    return this;
}

PredicateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PredicateContext.prototype.constructor = PredicateContext;

PredicateContext.prototype.PREDICATE_START = function() {
    return this.getToken(BisonParser.PREDICATE_START, 0);
};

PredicateContext.prototype.PREDICATE_CLOSE = function() {
    return this.getToken(BisonParser.PREDICATE_CLOSE, 0);
};

PredicateContext.prototype.PREDICATE_CONTENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BisonParser.PREDICATE_CONTENT);
    } else {
        return this.getToken(BisonParser.PREDICATE_CONTENT, i);
    }
};


PredicateContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterPredicate(this);
	}
};

PredicateContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitPredicate(this);
	}
};

PredicateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitPredicate(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.PredicateContext = PredicateContext;

BisonParser.prototype.predicate = function() {

    var localctx = new PredicateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, BisonParser.RULE_predicate);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this.match(BisonParser.PREDICATE_START);
        this.state = 118;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BisonParser.PREDICATE_CONTENT) {
            this.state = 115;
            this.match(BisonParser.PREDICATE_CONTENT);
            this.state = 120;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 121;
        this.match(BisonParser.PREDICATE_CLOSE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TagRuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_tagRule;
    return this;
}

TagRuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TagRuleContext.prototype.constructor = TagRuleContext;

TagRuleContext.prototype.TAG_START = function() {
    return this.getToken(BisonParser.TAG_START, 0);
};

TagRuleContext.prototype.TAG_CLOSE = function() {
    return this.getToken(BisonParser.TAG_CLOSE, 0);
};

TagRuleContext.prototype.TAG_CONTENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BisonParser.TAG_CONTENT);
    } else {
        return this.getToken(BisonParser.TAG_CONTENT, i);
    }
};


TagRuleContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterTagRule(this);
	}
};

TagRuleContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitTagRule(this);
	}
};

TagRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitTagRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BisonParser.TagRuleContext = TagRuleContext;

BisonParser.prototype.tagRule = function() {

    var localctx = new TagRuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, BisonParser.RULE_tagRule);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(BisonParser.TAG_START);
        this.state = 125; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 124;
            this.match(BisonParser.TAG_CONTENT);
            this.state = 127; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===BisonParser.TAG_CONTENT);
        this.state = 129;
        this.match(BisonParser.TAG_CLOSE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SymbolDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BisonParser.RULE_symbolDeclaration;
    return this;
}

SymbolDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SymbolDeclarationContext.prototype.constructor = SymbolDeclarationContext;

SymbolDeclarationContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

SymbolDeclarationContext.prototype.tagRule = function() {
    return this.getTypedRuleContext(TagRuleContext,0);
};

SymbolDeclarationContext.prototype.symbolDef = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SymbolDefContext);
    } else {
        return this.getTypedRuleContext(SymbolDefContext,i);
    }
};

SymbolDeclarationContext.prototype.symbol = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SymbolContext);
    } else {
        return this.getTypedRuleContext(SymbolContext,i);
    }
};

SymbolDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.enterSymbolDeclaration(this);
	}
};

SymbolDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof BisonParserListener ) {
        listener.exitSymbolDeclaration(this);
	}
};

SymbolDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BisonParserVisitor ) {
        return visitor.visitSymbolDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};



